// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect.basic check title when label is a object 1`] = `
<span
  aria-haspopup="listbox"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection-selected-value"
      >
        <span>
          Do not show
        </span>
      </span>
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders TreeNode correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders TreeNode correctly with falsy child 1`] = `
<span
  aria-haspopup="listbox"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="0"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="forTest awesome awesome-enabled"
  role="combobox"
  style="width:300px"
  tabindex="-1"
>
  <span
    class="awesome-selection awesome-selection--multiple"
  >
    <ul
      class="awesome-selection__rendered"
      role="menubar"
    >
      <li
        class="awesome-search awesome-search--inline"
      >
        <span
          class="awesome-search__field__wrap"
        >
          <input
            aria-autocomplete="list"
            aria-label="filter select"
            aria-multiline="false"
            class="awesome-search__field"
            type="text"
            value=""
          />
          <span
            class="awesome-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders disabled correctly 1`] = `
<span
  aria-disabled="true"
  aria-haspopup="listbox"
  class="rc-tree-select rc-tree-select-disabled"
  role="combobox"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--single"
  >
    <span
      class="rc-tree-select-selection__rendered"
    >
      <span
        class="rc-tree-select-selection__placeholder"
      />
    </span>
    <span
      class="rc-tree-select-arrow"
      style="outline:none"
    >
      <b />
    </span>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders tree correctly 1`] = `
<span
  aria-haspopup="listbox"
  class="rc-tree-select rc-tree-select-enabled"
  role="combobox"
  tabindex="-1"
>
  <span
    class="rc-tree-select-selection rc-tree-select-selection--multiple"
  >
    <ul
      class="rc-tree-select-selection__rendered"
      role="menubar"
    >
      <li
        class="rc-tree-select-search rc-tree-select-search--inline"
      >
        <span
          class="rc-tree-select-search__field__wrap"
        >
          <input
            aria-autocomplete="list"
            aria-label="filter select"
            aria-multiline="false"
            class="rc-tree-select-search__field"
            type="text"
            value=""
          />
          <span
            class="rc-tree-select-search__field__mirror"
          >
             
          </span>
        </span>
      </li>
    </ul>
  </span>
</span>
`;

exports[`TreeSelect.basic render renders treeDataSimpleMode correctly 1`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    tabindex="0"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--single"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline:none"
      >
        <b />
      </span>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft "
      style="visibility:hidden"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <span
          class="rc-tree-select-dropdown-search"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              type="text"
              value=""
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
               
            </span>
          </span>
        </span>
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
              title="label0"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                label0
              </span>
            </span>
            <ul
              class="rc-tree-select-tree-child-tree rc-tree-select-tree-child-tree-open"
              data-expanded="true"
              role="group"
            >
              <li
                class="rc-tree-select-tree-treenode-switcher-open"
                role="treeitem"
              >
                <span
                  class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                />
                <span
                  class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                  title="label1"
                >
                  <span
                    class="rc-tree-select-tree-title"
                  >
                    label1
                  </span>
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes check tree changed by filter 1`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    style=""
    tabindex="0"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--single"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline: none;"
      >
        <b />
      </span>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; min-width: 0;"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <span
          class="rc-tree-select-dropdown-search"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              type="text"
              value="a"
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
              a 
            </span>
          </span>
        </span>
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open filter-node"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labela"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labela
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes check tree changed by filter 2`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    style=""
    tabindex="0"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--single"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline: none;"
      >
        <b />
      </span>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; min-width: 0;"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <span
          class="rc-tree-select-dropdown-search"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              type="text"
              value=""
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
               
            </span>
          </span>
        </span>
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labela"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labela
              </span>
            </span>
          </li>
          <li
            class="rc-tree-select-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labelb"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labelb
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes filter node but not remove then 1`] = `
<div>
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    style=""
    tabindex="0"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--single"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline: none;"
      >
        <b />
      </span>
    </span>
  </span>
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft "
      style="left: -999px; top: -995px; min-width: 0;"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <span
          class="rc-tree-select-dropdown-search"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              type="text"
              value="a"
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
              a 
            </span>
          </span>
        </span>
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-open filter-node"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labela"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labela
              </span>
            </span>
          </li>
          <li
            class="rc-tree-select-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labelb"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labelb
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes renders search input 1`] = `
Array [
  <span
    aria-controls="rc-tree-select-list_1"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="rc-tree-select-list_1"
    class="rc-tree-select rc-tree-select-open rc-tree-select-focused rc-tree-select-enabled"
    role="combobox"
    tabindex="0"
  >
    <span
      class="rc-tree-select-selection rc-tree-select-selection--single"
    >
      <span
        class="rc-tree-select-selection__rendered"
      >
        <span
          class="rc-tree-select-selection__placeholder"
        />
      </span>
      <span
        class="rc-tree-select-arrow"
        style="outline:none"
      >
        <b />
      </span>
    </span>
  </span>,
  <div>
    <div
      class="rc-tree-select-dropdown rc-tree-select-dropdown--single rc-tree-select-dropdown-placement-bottomLeft "
      style="visibility:hidden"
    >
      <div
        id="rc-tree-select-list_1"
        role="listbox"
        tabindex="-1"
      >
        <span
          class="rc-tree-select-dropdown-search"
        >
          <span
            class="rc-tree-select-search__field__wrap"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc-tree-select-list_1"
              aria-label="filter select"
              aria-multiline="false"
              class="rc-tree-select-search__field"
              type="text"
              value=""
            />
            <span
              class="rc-tree-select-search__field__mirror"
            >
               
            </span>
          </span>
        </span>
        <ul
          class="rc-tree-select-tree"
          role="tree"
          unselectable="on"
        >
          <li
            class="rc-tree-select-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labela"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labela
              </span>
            </span>
          </li>
          <li
            class="rc-tree-select-tree-treenode-switcher-close"
            role="treeitem"
          >
            <span
              class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
            />
            <span
              class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
              title="labelb"
            >
              <span
                class="rc-tree-select-tree-title"
              >
                labelb
              </span>
            </span>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;
